# LeaseCopilot

backend/: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
backend/scripts/: weaviate_bootstrap.py
backend/src/app/adapters/llm/: ollama_llm.py  openai_llm.py
backend/src/app/adapters/rerank/: cohere_reranker.py
backend/src/app/adapters/storage/: local_storage.py
backend/src/app/adapters/weaviate/: client.py  index.py  retriever.py  schema.py
backend/src/app/api/: main.py
backend/src/app/core/ingestion/: chunker.py  parser.py  service.py
backend/src/app/core/qa/: citations.py  prompt.py  service.py
